--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
     </head>
     <body>
       <c-navigation></c-navigation>
+      <c-header></c-header>
+      <events-grid></events-grid>
+      <c-footer></c-footer>
+
       <script type="text/javascript" src="./components/Navigation.js"></script>
+      <script type="text/javascript" src="./components/Header.js"></script>
+      <script type="text/javascript" src="./components/EventsGrid.js"></script>
+      <script type="text/javascript" src="./components/Footer.js"></script>
     </body>
 </html>
